# pfnc

./: .gitignore  Cargo.toml  README.md  roadmap.md
crates/agent-bsd/: Cargo.toml
crates/agent-bsd/src/: main.rs
crates/agent-linux/: Cargo.toml
crates/agent-linux/src/: lib.rs  main.rs  protocol.rs
crates/agent-linux/tests/: file_transfer.rs  handshake.rs
crates/agent-macos/: Cargo.toml
crates/agent-macos/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: actions.rs  app.rs  editor.rs  keymap.rs  lib.rs  main.rs  registry.rs  ui.rs
crates/app/tests/: app_flows.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: job.rs  lib.rs  mode.rs  panel.rs  transport.rs  vfs.rs
crates/tui/: Cargo.toml
crates/tui/src/: dialog.rs  fkeys.rs  layout.rs  lib.rs  panel.rs
crates/vfs-archive/: Cargo.toml
crates/vfs-archive/src/: format.rs  index.rs  lib.rs  tar_backend.rs  zip_backend.rs
crates/vfs-local/: Cargo.toml
crates/vfs-local/src/: lib.rs
crates/vfs-local/tests/: job_orchestration.rs  sync_orchestration.rs
crates/vfs-sftp/: Cargo.toml
crates/vfs-sftp/src/: auth.rs  deploy.rs  hostkey.rs  lib.rs  quic_agent.rs
crates/vfs-sftp/tests/: agent_deploy.rs  quic_fast_path.rs  sftp_integration.rs
crates/vfs-sftp/tests/support/: mod.rs
