[package]
name = "pfnc-agent-linux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pfnc-agent"
path = "src/main.rs"

[lib]
name = "pfnc_agent_linux"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
