[package]
name = "pfnc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pfnc"
path = "src/lib.rs"

[[bin]]
name = "pfnc"
path = "src/main.rs"

[dependencies]
pfnc-core = { workspace = true }
pfnc-vfs-local = { workspace = true }
pfnc-vfs-sftp = { workspace = true }
pfnc-vfs-archive = { workspace = true }
pfnc-config = { workspace = true }
pfnc-tui = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
camino = { workspace = true }
tar = { workspace = true }
