[package]
name = "pfnc-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
camino = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
