[package]
name = "pfnc-vfs-archive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pfnc-core = { workspace = true }
camino = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
pfnc-vfs-local = { workspace = true }
