[package]
name = "pfnc-vfs-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pfnc-core = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
