[package]
name = "pfnc-vfs-sftp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
pfnc-core = { workspace = true }
camino = { workspace = true }
ssh2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pfnc-vfs-local = { workspace = true }
pfnc-agent-linux = { workspace = true }
tokio = { workspace = true }
